# avoid-2d-raylib

./: README.md
Game/: CMakeLists.txt  vcpkg.json
Game/Batch/: Build.bat  Generate.bat
Game/Source/Inc/: Actor.h  ActorManager.h  CharacterModel.h  CharacterView.h  Enemy.h  EnemyController.h  EnemySpawner.h  EnemySpawnerController.h  EnemySpawnerModel.h  GameMacro.h  IController.h  IModel.h  IPhase.h  IView.h  MainPhase.h  MathHelper.h  PhaseManager.h  Player.h  PlayerController.h  PlayerModel.h  PlayerView.h
Game/Source/Src/: Actor.cpp  ActorManager.cpp  CharacterModel.cpp  CharacterView.cpp  Enemy.cpp  EnemyController.cpp  EnemySpawner.cpp  EnemySpawnerController.cpp  EnemySpawnerModel.cpp  Main.cpp  MainPhase.cpp  MathHelper.cpp  PhaseManager.cpp  Player.cpp  PlayerController.cpp  PlayerView.cpp
